--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
           <span>Vol</span>
           <input id="volume" type="range" min="0" max="1" step="0.01" value="0.9" />
         </label>
+        <!-- Only shown in Cinema Mode -->
+        <button id="btn-exit-cinema" class="btn" title="Exit Cinema Mode">Exit</button>
       </div>
     </section>
   </main>
