--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <span>Vol</span>
           <input id="volume" type="range" min="0" max="1" step="0.01" value="0.9" />
         </label>
-        <button id="btn-exit-cinema" class="btn" title="Exit Cinema Mode">Exit</button>
+        <button id="btn-exit-cinema" class="btn" title="Exit Cinema Mode">Exit Cinema Mode</button>
       </div>
     </section>
   </main>
