--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
   </footer>
 
   <audio id="audio" crossorigin="anonymous"></audio>
-  <script src="app.js"></script>
+  <script src="https://unpkg.com/three@0.160.0/build/three.min.js"></script>
+  <script src="https://unpkg.com/postprocessing@6.35.3/build/postprocessing.min.js"></script>
+  <script type="module" src="visualizers/aurora.js"></script>
+  <script type="module" src="visualizers/aurora2d.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
