--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Local Jukebox + Visualizer</title>
+  <!-- Site styling -->
   <link rel="stylesheet" href="styles.css" />
-  <link rel="modulepreload" href="modules/three.module.js" />
-  <link rel="modulepreload" href="modules/postprocessing.js" />
+  <!-- Preload vendor modules from a CDN.  We pull Three.js and the
+       postprocessing library directly from unpkg.  Using `modulepreload`
+       hints to the browser to fetch these ES modules early.  When
+       aurora.js imports "three" or "postprocessing" it resolves to
+       these URLs via the AURORA_VENDOR_MODULES map defined below. -->
+  <link rel="modulepreload" href="https://unpkg.com/three@0.160.0/build/three.module.js" />
+  <link rel="modulepreload" href="https://unpkg.com/postprocessing@6.35.3/build/postprocessing.js" />
+  <script>
+    // Expose a map of vendor module names to absolute URLs.  Our visualiser
+    // consults this object to resolve the import paths for Three.js and
+    // the postprocessing library.  Using a CDN avoids needing local
+    // copies in the repository.
+    window.AURORA_VENDOR_MODULES = {
+      three: 'https://unpkg.com/three@0.160.0/build/three.module.js',
+      postprocessing: 'https://unpkg.com/postprocessing@6.35.3/build/postprocessing.js'
+    };
+  </script>
 </head>
 <body>
   <header class="app-header">
@@ -18,25 +34,24 @@
       <label class="select-wrap">
         <span>Quality</span>
         <select id="quality">
-          <option value="high" selected>High</option>
+          <option value="high">High</option>
           <option value="medium">Medium</option>
           <option value="low">Low</option>
         </select>
       </label>
     </div>
   </header>
-
   <main class="app-main">
     <aside class="sidebar" id="library">
       <div class="dropzone" id="dropzone">
-        <p>Drag & drop audio files here<br><small>…or click “Add Songs”</small></p>
+        <p>Drag &amp; drop audio files here<br /><small>…or click “Add Songs”</small></p>
       </div>
       <ul id="trackList" class="track-list"></ul>
     </aside>
-
     <section class="stage">
+      <!-- Fallback canvas for the 2D visualiser.  This element will be hidden
+           when the WebGL visualiser is active. -->
       <canvas id="vis"></canvas>
-
       <div class="transport" id="transport">
         <button id="playPause" class="btn big">Play</button>
         <input id="seek" type="range" min="0" max="1" step="0.001" value="0" />
@@ -45,25 +60,17 @@
           <span>Vol</span>
           <input id="volume" type="range" min="0" max="1" step="0.01" value="0.9" />
         </label>
-        <button id="btn-exit-cinema" class="btn" title="Exit Cinema Mode">Exit Cinema</button>
+        <!-- Exit button only appears in cinema mode -->
+        <button id="btn-exit-cinema" class="btn" title="Exit Cinema Mode">Exit</button>
       </div>
     </section>
   </main>
-
   <footer class="app-footer">
     <small>All processing happens locally in your browser. Nothing is uploaded.</small>
   </footer>
-
   <audio id="audio" crossorigin="anonymous"></audio>
-  <script>
-    window.AURORA_VENDOR_MODULES = Object.assign(
-      {
-        three: './modules/three.module.js',
-        postprocessing: './modules/postprocessing.js'
-      },
-      window.AURORA_VENDOR_MODULES || {}
-    );
-  </script>
+  <!-- Load our application as an ES module.  This script bootstraps the audio
+       player and visualiser manager, then hands off control to AuroraOrbit. -->
   <script type="module" src="app.js"></script>
 </body>
 </html>
