--- a/index.html
+++ b/index.html
@@ -8,26 +8,11 @@
   <link rel="stylesheet" href="styles.css" />
   <!-- Preload vendor modules from a CDN.  We pull Three.js and the
        postprocessing library directly from unpkg.  Using `modulepreload`
-       hints to the browser to fetch these ES modules early.  When
-       aurora.js imports "three" or "postprocessing" it resolves to
-       these URLs via the AURORA_VENDOR_MODULES map defined below. -->
-  <link rel="modulepreload" href="https://unpkg.com/three@0.160.0/build/three.module.js" />
-  <!-- Preload the ES module build of postprocessing. The `?module` suffix
-       instructs unpkg to serve an ESM build that supports static imports.
-       See https://github.com/pmndrs/postprocessing for details. -->
+       hints to the browser to fetch these ES modules early.  We use
+       the `?module` suffix for both libraries so they resolve to the
+       same module instance when imported. -->
+  <link rel="modulepreload" href="https://unpkg.com/three@0.160.0?module" />
   <link rel="modulepreload" href="https://unpkg.com/postprocessing@6.35.3?module" />
-  <script>
-    // Expose a map of vendor module names to absolute URLs.  Our visualiser
-    // consults this object to resolve the import paths for Three.js and
-    // the postprocessing library.  Using a CDN avoids needing local
-    // copies in the repository.
-    window.AURORA_VENDOR_MODULES = {
-      three: 'https://unpkg.com/three@0.160.0/build/three.module.js',
-      // Use the ESM build of postprocessing via the `?module` suffix so
-      // named exports like BloomEffect are available.
-      postprocessing: 'https://unpkg.com/postprocessing@6.35.3?module'
-    };
-  </script>
 </head>
 <body>
   <header class="app-header">
