--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Local Jukebox + Visualizer</title>
+  <!-- Provide a tiny transparent favicon to avoid 404 requests. -->
+  <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGMAAQAABQABDQottAAAAABJRU5ErkJggg==" />
   <!-- Site styling -->
   <link rel="stylesheet" href="styles.css" />
   <!-- Preload Three.js from a CDN.  The `?module` suffix ensures
